@@ -10,7 +10,7 @@ use Devel::Cover::Truth_Table;
 
 use Getopt::Long;
 use Template 2.00;
-use CGI;
+use HTML::Entities;
 
 my $Template;
 my %Filenames;
@@ -163,7 +163,7 @@ sub print_file {
         my %metric = get_metrics($db, $options, $file_data, $.);
         my %line = (
             number  => $.,
-            text    => CGI::escapeHTML($l),
+            text    => encode_entities($l),
             metrics => [],
         );
         $line{text} =~ s/\t/        /g;
@@ -261,7 +261,7 @@ sub print_branches {
                 class      => cvg_class($b->percentage),
                 parts      => [{text => 'T', class => $tf[0] ? 'covered' : 'uncovered'},
                 {text => 'F', class => $tf[1] ? 'covered' : 'uncovered'}],
-                text       => CGI::escapeHTML($b->text),
+                text       => encode_entities($b->text),
             };
         }
     }
@@ -301,7 +301,7 @@ sub print_conditions {
                 ref        => "line$location",
                 percentage => sprintf("%.0f", $c->[0]->percentage),
                 class      => cvg_class($c->[0]->percentage),
-                condition  => CGI::escapeHTML($c->[1]),
+                condition  => encode_entities($c->[1]),
                 coverage   => $c->[0]->html,
             };
         }
